--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-redux": "^9.2.0",
     "react-router": "^7.1.3",
     "react-router-dom": "^7.1.3",
+    "react-stars": "^2.2.5",
     "react-toastify": "^11.0.3",
     "styled-components": "^6.1.14"
   },
