--- a/package.json
+++ b/package.json
@@ -21,6 +21,9 @@
     "multer": "^1.4.5-lts.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-icons": "^5.5.0",
+    "react-loader-spinner": "^6.1.6",
+    "react-modal": "^3.16.3",
     "react-redux": "^9.2.0",
     "react-router": "^7.1.3",
     "react-router-dom": "^7.1.3",
