--- a/package.json
+++ b/package.json
@@ -13,23 +13,26 @@
     "@babel/preset-react": "^7.26.3",
     "@fortawesome/free-solid-svg-icons": "^6.7.2",
     "@fortawesome/react-fontawesome": "^0.2.2",
-    "@reduxjs/toolkit": "^2.5.1",
-    "@tailwindcss/postcss": "^4.0.0",
-    "@tailwindcss/vite": "^4.0.1",
-    "axios": "^1.7.9",
+    "@reduxjs/toolkit": "^2.6.0",
+    "@tailwindcss/postcss": "^4.0.9",
+    "@tailwindcss/vite": "^4.0.9",
+    "axios": "^1.8.1",
     "cors": "^2.8.5",
+    "html2canvas": "^1.4.1",
     "multer": "^1.4.5-lts.1",
     "react": "^18.3.1",
+    "react-dnd": "^16.0.1",
+    "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.5.0",
     "react-loader-spinner": "^6.1.6",
     "react-modal": "^3.16.3",
     "react-redux": "^9.2.0",
-    "react-router": "^7.1.3",
-    "react-router-dom": "^7.1.3",
+    "react-router": "^7.2.0",
+    "react-router-dom": "^7.2.0",
     "react-stars": "^2.2.5",
-    "react-toastify": "^11.0.3",
-    "styled-components": "^6.1.14"
+    "react-toastify": "^11.0.5",
+    "styled-components": "^6.1.15"
   },
   "devDependencies": {
     "@eslint/js": "^9.19.0",
